--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     alert("자바 스크립트 환영!!");
     }
   </script>
-  <titile>자바 스크립트 실습</title>
+  <title>자바 스크립트 실습</title>
   </head>
   <body>
     <header>
