--- a/idndex.html
+++ b/idndex.html
@@ -14,8 +14,8 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <section>
 <p>20XX-XX-XX 실습 내용</p>
 <ol type ="1">
-<li><a href="https://xxxxxxxxxxx.github.io/abc.html" target="_blank">7-1 abc.html</a></li> 
-<li><a href="https://xxxxxxxxxxx.github.io/def.html" target="_blank">7-2 def.html</a></li> 
+<li><a href="https://sam364512.github.io/abc.html" target="_blank">7-1 abc.html</a></li> 
+<li><a href="https://sam364512.github.io/def.html" target="_blank">7-2 def.html</a></li> 
 </ol>
 </section>
 </body>
