--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
   <ul><hr/>
     <li> 1주 1회차 </li>
     <ol>
-      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">Eclipse 초기 실행(hw1_1_1.html)</a></li>
+      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">애국가(hw1_1_1.html)</a></li>
+      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">자바스크립트(hw1_1_1.html)</a></li>
+      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">커밋 제한 횟수(hw1_1_1.html)</a></li>
+      li><a href="https://sam364512.github.io/java/hw1_1_1.html">문제 답(hw1_1_1.html)</a></li>
     <li> 1주 2회차 </li>
     <ol>
       <li><a href="https://sam364512.github.io/java/hw1_2_1.html">변학도실습 desktop/mobile용(hw1_2_1.html)</a></li>
-      <li><a href="https://sam364512.github.io/java/hw1_2_2.html">변학도실습 desktop용(hw1_2_2.html)</a></li>
 </ol><hr/>
 </ul>
 </body></html>
