--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
       <li><a href="https://sam364512.github.io/html5/basicHtml.html">애국가(hw1_1_1.html)</a></li>
       <li><a href="https://sam364512.github.io/java/hw1_1_1.html">자바스크립트(hw1_1_1.html)</a></li>
       <li><a href="https://sam364512.github.io/java/hw1_1_1.html">커밋 제한 횟수(hw1_1_1.html)</a></li>
-      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">문제 답(hw1_1_1.html)</a></li>
+      <li><a href="https://sam364512.github.io/ondex.html">문제 답(hw1_1_1.html)</a></li>
     <li> 1주 2회차 </li>
     <ol>
       <li><a href="https://sam364512.github.io/java/hw1_2_1.html">변학도실습 desktop/mobile용(hw1_2_1.html)</a></li>
