--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
   <ul><hr/>
     <li> 1주 1회차 </li>
     <ol>
-      <li><a href="https://sam364512.github.io/html5/basicHtml.html">애국가(hw1_1_1.html)</a></li>
-      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">자바스크립트(hw1_1_1.html)</a></li>
-      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">커밋 제한 횟수(hw1_1_1.html)</a></li>
-      <li><a href="https://sam364512.github.io/ondex.html">문제 답(hw1_1_1.html)</a></li>
-<ul><hr/>
+      <li><a href="https://sam364512.github.io/html5/basicHtml.html">애국가</a></li>
+      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">자바스크립트</a></li>
+      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">커밋 제한 횟수</a></li>
+      <li><a href="https://sam364512.github.io/ondex.html">문제 답</a></li>
+      <ul><hr/>
       <li> 1주 2회차 </li>
     <ol>
       <li><a href="https://sam364512.github.io/java/hw1_2_1.html">변학도실습 desktop/mobile용(hw1_2_1.html)</a></li>
