--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
     <li> 1주 </li>
     <ol>
       <li><a href="https://sam364512.github.io/html5/basicHtml.html">실습문제 애국가</a></li>
-      <li><a href="https://sam364512.github.io/java/hw1_1_1.html">자바스크립트</a></li>
+      <li><a href="https://sam364512.github.io/oidex.html">자바스크립트</a></li>
       <li><a href="https://sam364512.github.io/xndex.html">1-3 문제 커밋 제한 횟수</a></li>
       <li><a href="https://sam364512.github.io/ondex.html">1-1 문제 답</a></li>
 </ol><hr/>
