--- a/oidex.html
+++ b/oidex.html
@@ -12,13 +12,13 @@ nav ul {margin:0; padding:0;}
 nav ul li {display:inline; margin:5px; }
 a {text-decoration:none;}
 #id_form {width:100px; height:14px; color:red;}
-</style>
-<script type=“text/javascript”>
-function fnTest(){
-document.write(“자바스크립트 환영!”)
-alert(“자바 스크립트 환영!!”);
-}
-</script>
+  </style>
+<script type="text/javascript">
+  function fnTest(){
+    document,write("자바스크립트 환영!")
+    alert("자바 스크립트 환영!!");
+  }
+  </script>
 <title>자바 스크립트 실습</title>
 </head>
 <body>
