--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 </style></head>
 <body>
 <h1>김태형 과제 리스트</h3>
-  <ul><hr/>
-    <li> 1주 </li>
-    <ol>
-      <li><a href="https://sam364512.github.io/html5/basicHtml.html">실습문제 애국가</a></li>
-      <li><a href="https://sam364512.github.io/oidex.html">자바스크립트</a></li>
-      <li><a href="https://sam364512.github.io/xndex.html">1-3 문제 커밋 제한 횟수</a></li>
-      <li><a href="https://sam364512.github.io/ondex.html">1-1 문제 답</a></li>
+<ul><hr/>
+<li> 1주 </li>
+<ol>
+<li><a href="https://sam364512.github.io/html5/basicHtml.html">실습문제 애국가</a></li>
+<li><a href="https://sam364512.github.io/html5/oidex.html">자바스크립트</a></li>
+<li><a href="https://sam364512.github.io/xndex.html">1-3 문제 커밋 제한 횟수</a></li>
+<li><a href="https://sam364512.github.io/ondex.html">1-1 문제 답</a></li>
+<li> 1주 </li>
+<ol>
+<li><a href="https://sam364512.github.io/html5/basicHtml.html">실습문
 </ol><hr/>
 </ul>
 </body></html>
