--- a/html5/oidex.html
+++ b/html5/oidex.html
@@ -16,7 +16,7 @@
   </style>
   <script type="text/javascript">
     function fnTest(){
-    document,write("자바스크립트 환영!")
+    document.write("자바스크립트 환영!")
     alert("자바 스크립트 환영!!");
     }
   </script>
