--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html><head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>개인 과제 리스트</title>
+<title>개인 실습 & 과제 리스트</title>
 <style>
 a:link {color:blue; text-decoration:none;} a:visited { color:purple; text-decoration:none;}
 a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
 </style></head>
 <body>
-<h1>김태형 과제 리스트</h3>
+<h1>김태형 실습 & 과제 리스트</h3>
 <ul><hr/>
-<li> 1주 </li>
+<li> 1주차 </li>
 <ol>
 <li><a href="https://sam364512.github.io/html5/basicHtml.html">실습문제 애국가</a></li>
 <li><a href="https://sam364512.github.io/html5/oidex.html">실습문제 자바스크립트</a></li>
-<li><a href="https://sam364512.github.io/html5/xndex.html">1-3 문제 커밋 제한 횟수</a></li>
-<li><a href="https://sam364512.github.io/html5/ondex.html">1-1 문제 답</a></li>
+<li><a href="https://sam364512.github.io/html5/xndex.html">과제 1-3 문제 커밋 제한 횟수</a></li>
+<li><a href="https://sam364512.github.io/html5/ondex.html">과제 1-1 문제 답</a></li>
 </ol><hr/>
-<li> 2주 </li>
+<li> 2주차 </li>
 <ol>
 <li><a href="https://sam364512.github">???</a></li>
 </ol><hr/>
