--- a/def.html
+++ b/def.html
@@ -1,10 +1,10 @@
 <!doctype html> <!-- def.html -->
 <html>
   <head>
-    <meta charset="utf-8/>
+    <meta charset="utf-8"/>
     <title>제목</title>
   </head>
- <body
+ <body>
   <p>
    공동데이터 포탈이동은
     <a href="http://www.data.go.kr">
