--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 </ol><hr/>
 <li> 2주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/def.html">과제 2-1 </a></li>
+<li><a href="https://sam364512.github.io/html5/def.html">과제 2-1 </a></li>
+<li><a href="https://sam364512.github.io/html5/def.html">과제 2-2 </a></li>
 </ol><hr/>
 </ul>
 </body></html>
