--- a/2/globalEvent.html
+++ b/2/globalEvent.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8"/>
     <script>
       function eventonclick() {
-        document.getElementByld("id_1").innerHTML
-        ="클릭함";
+        document.getElementByld("id_1").innerHTML="클릭함";
       }
     </script>
-    <title>타이틀 표제</title>
+  <title>타이틀 표제</title>
   </head>
   <body>
    <p onclick="eventonclick()">클릭</p>
