--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 </ol><hr/>
 <li> 2주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/html5/def.html">과제 2-1 </a></li>
-<li><a href="https://sam364512.github.io/html5/def.html">과제 2-2 </a></li>
+<li><a href="https://sam364512.github.io/2/def.html">과제 2-1 </a></li>
+<li><a href="https://sam364512.github.io/2/loveKorea.html">과제 2-2 loveKorea </a></li>
+<li><a href="https://sam364512.github.io/2/globalAttribute.html">과제 2-2 globalAttribute </a></li>
+<li><a href="https://sam364512.github.io/2/globalEvent.html">과제 2-2 globalEvent </a></li>
+<li><a href="https://sam364512.github.io/2/globalEvent.html">과제 2-3 ??? </a></li>  
 </ol><hr/>
 </ul>
 </body></html>
