--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li><a href="https://sam364512.github.io/2/loveKorea.html">과제 2-2 loveKorea </a></li>
 <li><a href="https://sam364512.github.io/2/globalAttribute.html">과제 2-2 globalAttribute </a></li>
 <li><a href="https://sam364512.github.io/2/globalEvent.html">과제 2-2 globalEvent </a></li>
-<li><a href="https://sam364512.github.io/2/headBasic.html">과제 2-3 headBasic </a></li>  
+<li><a href="https://sam364512.github.io/2/headBasic.html">과제 2-3 headBasic </a></li>
+<li><a href="https://sam364512.github.io/2/bodyBasic.html">과제 2-3 bodyBasic </a></li> 
 </ol><hr/>
 </ul>
 </body></html>
