--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 </ol><hr/>
 <li> 2주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/2/def.html">과제 2-1 </a></li>
-<li><a href="https://sam364512.github.io/2/loveKorea.html">과제 2-2 loveKorea </a></li>
-<li><a href="https://sam364512.github.io/2/globalAttribute.html">과제 2-2 globalAttribute </a></li>
-<li><a href="https://sam364512.github.io/2/globalEvent.html">과제 2-2 globalEvent </a></li>
-<li><a href="https://sam364512.github.io/2/headBasic.html">과제 2-3 headBasic </a></li>
-<li><a href="https://sam364512.github.io/2/bodyBasic.html">과제 2-3 bodyBasic </a></li> 
+<li><a href="https://sam364512.github.io/2/def.html">실습 과제 2-1 </a></li>
+<li><a href="https://sam364512.github.io/2/def.html">강의 과제 2-1 </a></li>  
+<li><a href="https://sam364512.github.io/2/loveKorea.html">실습 과제 2-2 loveKorea </a></li>
+<li><a href="https://sam364512.github.io/2/globalAttribute.html">실습 과제 2-2 globalAttribute </a></li>
+<li><a href="https://sam364512.github.io/2/globalEvent.html">실습 과제 2-2 globalEvent </a></li>
+<li><a href="https://sam364512.github.io/2/def.html">강의 과제 2-2 </a></li>
+<li><a href="https://sam364512.github.io/2/headBasic.html">실습 과제 2-3 headBasic </a></li>
+<li><a href="https://sam364512.github.io/2/bodyBasic.html">실습 과제 2-3 bodyBasic </a></li>
+<li><a href="https://sam364512.github.io/2/koreaAnthem3.html">강의 과제 2-3 </a></li>
 </ol><hr/>
 </ul>
 </body></html>
