--- a/2/next.html
+++ b/2/next.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
  <meta charset="utf-8"/>
- <title>과제 2-1 엘리멘트</title>
+ <title>과제 2-1 엘리멘트 개수</title>
 </head>
 <body>
  <h1>2-1 다음 HTML 문서에서 사용된 모든 엘리멘트를 쓰시오</h1>
- <p> <p>공공데이터 포털이동은 <a href="http://www.data.go.kr">여기 </a>를 클릭하세요!</p> </p>
+ <p>엘리멘트의 개수는 8개이다</p>
 </body>
 </html>
