--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li> 2주차 </li>
 <ol>
 <li><a href="https://sam364512.github.io/2/def.html">실습 과제 2-1 def </a></li>
-<li><a href="https://sam364512.github.io/2/def.html">강의 과제 2-1 </a></li>  
+<li><a href="https://sam364512.github.io/2/hw2-1.html">강의 과제 2-1 엘리멘트 </a></li>  
 <li><a href="https://sam364512.github.io/2/loveKorea.html">실습 과제 2-2 loveKorea </a></li>
 <li><a href="https://sam364512.github.io/2/globalAttribute.html">실습 과제 2-2 globalAttribute </a></li>
 <li><a href="https://sam364512.github.io/2/globalEvent.html">실습 과제 2-2 globalEvent </a></li>
