--- a/2/hw2-1.html
+++ b/2/hw2-1.html
@@ -2,10 +2,11 @@
 <html lang="ko">
 <head>
  <meta charset="utf-8"/>
- <title>과제 2-1 엘리멘트 개수</title>
+ <title>과제 2-1 엘리먼트</title>
 </head>
 <body>
  <h1>2-1 다음 HTML 문서에서 사용된 모든 엘리멘트를 쓰시오</h1>
- <p>엘리멘트의 개수는 8개이다</p>
+ <p>엘리먼트의 개수는 7개이다</p>
+ <p> <html>엘리먼트, <head>엘리먼트, <meta>엘리먼트, <title>엘리먼트, <body>엘리먼트, <p>엘리먼트, <a>엘리먼트.</p>
 </body>
 </html>
