--- a/2/hw2-1.html
+++ b/2/hw2-1.html
@@ -1,4 +1,4 @@
-<!doctype html>  <!-- homework2-1.html -->
+<!doctype html>  <!-- hw2-1.html -->
 <html lang="ko">
 <head>
  <meta charset="utf-8"/>
@@ -7,6 +7,6 @@
 <body>
  <h1>2-1 다음 HTML 문서에서 사용된 모든 엘리멘트를 쓰시오</h1>
  <p>엘리먼트의 개수는 7개이다</p>
- <p> <html>엘리먼트, <head>엘리먼트, <meta>엘리먼트, <title>엘리먼트, <body>엘리먼트, <p>엘리먼트, <a>엘리먼트.</p>
+ <p> html엘리먼트, head엘리먼트, meta엘리먼트, title엘리먼트, body엘리먼트, p엘리먼트, a엘리먼트.</p>
 </body>
 </html>
