--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li><a href="https://sam364512.github.io/2/bodyBasic.html">실습 과제 2-3 bodyBasic </a></li>
 <li><a href="https://sam364512.github.io/2/koreaAnthem3.html">강의 과제 2-3 koreaAnthem3 </a></li>
 </ol><hr/>
+<li> 3주차 </li>
+<ol>
+<li><a href="https://sam364512.github.io/3/basicHeading.html">실습 과제 2-1 basicHeading </a></li>
+<li><a href="https://sam364512.github.io/3/basicPBrHr.html">실습 과제 2-1 basicPBrHr </a></li>  
+<li><a href="https://sam364512.github.io/3/basicChar.html">실습 과제 2-1 basicChar </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem4.html">강의 과제 2-1 koreaAnthem4 </a></li>
+<li><a href="https://sam364512.github.io/3/globalEvent.html">실습 과제 2-2 globalEvent </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem.html">강의 과제 2-2 koreaAnthem </a></li>
+<li><a href="https://sam364512.github.io/3/headBasic.html">실습 과제 2-3 headBasic </a></li>
+<li><a href="https://sam364512.github.io/3/bodyBasic.html">실습 과제 2-3 bodyBasic </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem3.html">강의 과제 2-3 koreaAnthem3 </a></li>
+</ol><hr/>
 </ul>
 </body></html>
