--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li><a href="https://sam364512.github.io/3/basicPBrHr.html">실습 과제 3-1 basicPBrHr </a></li>  
 <li><a href="https://sam364512.github.io/3/basicChar.html">실습 과제 3-1 basicChar </a></li>
 <li><a href="https://sam364512.github.io/3/koreaAnthem4.html">강의 과제 3-1 koreaAnthem4 </a></li>
-<li><a href="https://sam364512.github.io/3/globalEvent.html">실습 과제 3-2 globalEvent </a></li>
-<li><a href="https://sam364512.github.io/3/koreaAnthem.html">강의 과제 3-2 koreaAnthem </a></li>
-<li><a href="https://sam364512.github.io/3/headBasic.html">실습 과제 3-3 headBasic </a></li>
-<li><a href="https://sam364512.github.io/3/bodyBasic.html">실습 과제 3-3 bodyBasic </a></li>
+<li><a href="https://sam364512.github.io/3/basicList.html">실습 과제 3-2 basicList </a></li>
+<li><a href="https://sam364512.github.io/3/basicDList.html">실습 과제 3-2  basicDList </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem5.html">강의 과제 3-2 koreaAnthem5 </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem6.html">강의 과제 3-2 koreaAnthem6 </a></li>
 <li><a href="https://sam364512.github.io/3/koreaAnthem3.html">강의 과제 3-3 koreaAnthem3 </a></li>
 </ol><hr/>
 </ul>
