--- a/3/subjectTable1.html
+++ b/3/subjectTable1.html
@@ -14,7 +14,7 @@
 			<tr><th>시간</th><th>월</th><th>화</th><th>수</th><th>목</th><th>금</th><th>토</th></tr>
       </thead>
 		<tbody>
-			<tr><td>9</td></tr>
+			<tr><td>9</td><td></td><td rowspan="2" class="subject1">자료구조및실습</td><td></td><td rowspan="4" class="subject1">3d프린팅기초</td><td></td><td></td></tr>
 			<tr><td>10</td></tr>
 			<tr><td>11</td></tr>
 			<tr><td>12</td></tr>
