--- a/3/subjectTable1.html
+++ b/3/subjectTable1.html
@@ -15,14 +15,14 @@
       </thead>
 		<tbody>
 			<tr><td>9</td><td></td><td rowspan="2" class="subject1">자료구조및실습</td><td></td><td rowspan="4" class="subject1">3d프린팅기초</td><td></td><td></td></tr>
-			<tr><td>10</td><td></td><td></td><td></td><td></td><td></td></tr>
-			<tr><td>11</td></tr>
-			<tr><td>12</td></tr>
-			<tr><td>13</td></tr>
-			<tr><td>14</td></tr>
-			<tr><td>15</td></tr>
-			<tr><td>16</td></tr>
-			<tr><td>17</td></tr>
-			<tr><td>18</td></tr>
+			<tr><td>10</td><td></td><td></td><td></td><td></td></tr>
+			<tr><td>11</td><td></td><td></td><td rowspan="2" class="subject1">자료구조및실습</td><td></td><td></td></tr>
+			<tr><td>12</td><td></td><td></td><td></td><td></td></tr>
+			<tr><td>13</td><td rowspan="4" class="subject2">c++프로그래밍</td><td></td><td></td><td rowspan="2" class="subject2">인터넷응용</td><td></td><td></td></tr>
+			<tr><td>14</td><td></td><td></td><td></td><td></td></tr>
+			<tr><td>15</td><td></td><td></td><td rowspan="1" class="subject2">캠퍼스 멘토링</td><td></td><td></td></tr>
+			<tr><td>16</td><td></td><td></td><td></td><td></td><td></td></tr>
+			<tr><td>17</td><td></td><td></td><td></td><td></td><td></td></tr>
+			<tr><td>18</td><td></td><td></td><td></td><td></td><td rowspan="1" class="subject2">톨스토이와 도스토예프스키</td></tr>
 		</tbody>
 	</table></body></html>
