--- a/3/subjectTable1.html
+++ b/3/subjectTable1.html
@@ -23,6 +23,6 @@
 			<tr><td>15</td><td></td><td></td><td rowspan="1" class="subject2">캠퍼스 멘토링</td><td></td><td></td></tr>
 			<tr><td>16</td><td></td><td></td><td></td><td></td><td></td></tr>
 			<tr><td>17</td><td></td><td></td><td></td><td></td><td></td></tr>
-			<tr><td>18</td><td></td><td></td><td></td><td></td><td rowspan="1" class="subject2">톨스토이와 도스토예프스키</td></tr>
+			<tr><td>18</td><td></td><td></td><td></td><td></td><td></td><td rowspan="1" class="subject2">톨스토이와 도스토예프스키</td></tr>
 		</tbody>
 	</table></body></html>
