--- a/3/subjectTable1.html
+++ b/3/subjectTable1.html
@@ -3,7 +3,12 @@
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width, inital-scale=1">
 <style>
   table, thead, tbody, tfoot, tr, th, td {border: 2px solid black; border-collapse:collapse;text-align:center;}
-  .subject1 { background color:lightgray; } .subject 2 { background-color#FAF4Co; }
+  .subject1 { background color:blue; }
+  .subject2 { background-color:red; }
+  .subject3 { background-color:pink; }
+  .subject4 { background-color:green; }
+  .subject5 { background-colo:purple; }
+  .subject6 { background-color:skyblue; }
   th,td { width:50px; }
 </style> <!--  border-collapse:collapse 단선으로, 반대는 separate  -->
 <title> HTML5 시간표 만들기 숙제 </title>
@@ -14,15 +19,15 @@
 			<tr><th>시간</th><th>월</th><th>화</th><th>수</th><th>목</th><th>금</th><th>토</th></tr>
       </thead>
 		<tbody>
-			<tr><td>9</td><td></td><td rowspan="2" class="subject1">자료구조및실습</td><td></td><td rowspan="4" class="subject1">3d프린팅기초</td><td></td><td></td></tr>
+			<tr><td>9</td><td></td><td rowspan="2" class="subject1">자료구조및실습</td><td></td><td rowspan="4" class="subject2">3d프린팅기초</td><td></td><td></td></tr>
 			<tr><td>10</td><td></td><td></td><td></td><td></td></tr>
 			<tr><td>11</td><td></td><td></td><td rowspan="2" class="subject1">자료구조및실습</td><td></td><td></td></tr>
 			<tr><td>12</td><td></td><td></td><td></td><td></td></tr>
-			<tr><td>13</td><td rowspan="4" class="subject2">c++프로그래밍</td><td></td><td></td><td rowspan="2" class="subject2">인터넷응용</td><td></td><td></td></tr>
+			<tr><td>13</td><td rowspan="4" class="subject3">c++프로그래밍</td><td></td><td></td><td rowspan="2" class="subject4">인터넷응용</td><td></td><td></td></tr>
 			<tr><td>14</td><td></td><td></td><td></td><td></td></tr>
-			<tr><td>15</td><td></td><td></td><td rowspan="1" class="subject2">캠퍼스 멘토링</td><td></td><td></td></tr>
+			<tr><td>15</td><td></td><td></td><td rowspan="1" class="subject5">캠퍼스 멘토링</td><td></td><td></td></tr>
 			<tr><td>16</td><td></td><td></td><td></td><td></td><td></td></tr>
 			<tr><td>17</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-			<tr><td>18</td><td></td><td></td><td></td><td></td><td></td><td rowspan="1" class="subject2">톨스토이와 도스토예프스키</td></tr>
+			<tr><td>18</td><td></td><td></td><td></td><td></td><td></td><td rowspan="1" class="subject6">톨스토이와 도스토예프스키</td></tr>
 		</tbody>
 	</table></body></html>
