--- a/3/subjectTable1.html
+++ b/3/subjectTable1.html
@@ -3,11 +3,11 @@
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width, inital-scale=1">
 <style>
   table, thead, tbody, tfoot, tr, th, td {border: 2px solid black; border-collapse:collapse;text-align:center;}
-  .subject1 { background color:blue; }
+  .subject1 { background-color:blue; }
   .subject2 { background-color:red; }
   .subject3 { background-color:pink; }
   .subject4 { background-color:green; }
-  .subject5 { background-colo:purple; }
+  .subject5 { background-color:purple; }
   .subject6 { background-color:skyblue; }
   th,td { width:50px; }
 </style> <!--  border-collapse:collapse 단선으로, 반대는 separate  -->
