--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li><a href="https://sam364512.github.io/3/basicDList.html">실습 과제 3-2  basicDList </a></li>
 <li><a href="https://sam364512.github.io/3/koreaAnthem5.html">강의 과제 3-2 koreaAnthem5 </a></li>
 <li><a href="https://sam364512.github.io/3/koreaAnthem6.html">강의 과제 3-2 koreaAnthem6 </a></li>
-<li><a href="https://sam364512.github.io/3/koreaAnthem3.html">강의 과제 3-3 koreaAnthem3 </a></li>
+<li><a href="https://sam364512.github.io/3/basicTable1.html">실습 과제 3-3 basicTable1 </a></li>
+<li><a href="https://sam364512.github.io/3/tableSpan.html">실습 과제 3-3 tableSpan </a></li>
+<li><a href="https://sam364512.github.io/3/advTable.html">실습 과제 3-3 advTable </a></li>
+<li><a href="https://sam364512.github.io/3/advTable1.html">강의 과제 3-3 advTable1 </a></li>
+<li><a href="https://sam364512.github.io/3/tableHw.html">강의 과제 3-3 tableHw </a></li>
+<li><a href="https://sam364512.github.io/3/subjectTable1.html">강의 과제 3-3 subjectTable1 </a></li>
 </ol><hr/>
 </ul>
 </body></html>
