--- a/index.html
+++ b/index.html
@@ -46,5 +46,14 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li><a href="https://sam364512.github.io/3/tableHw.html">강의 과제 3-3 tableHw </a></li>
 <li><a href="https://sam364512.github.io/3/subjectTable1.html">강의 과제 3-3 subjectTable1 </a></li>
 </ol><hr/>
+<li> 3주차 </li>
+<ol>
+<li><a href="https://sam364512.github.io/4/divSpan.html">실습 과제 4-1 divSpan </a></li>
+<li><a href="https://sam364512.github.io/4/basicPDivSpan.html">실습 과제 4-1 basicPDivSpan.html </a></li>  
+<li><a href="https://sam364512.github.io/4/basicDiv.html">실습 과제 4-2 basicDiv </a></li>
+<li><a href="https://sam364512.github.io/4/advDiv.html">강의 과제 4-2 advDiv </a></li>
+<li><a href="https://sam364512.github.io/4/basicSemantic.html">실습 과제 4-3 basicSemantic </a></li>
+<li><a href="https://sam364512.github.io/4/basicModel.html">실습 과제 4-3  basicModel </a></li>
+</ol><hr/>
 </ul>
 </body></html>
