--- a/5/basicSemantic1.html
+++ b/5/basicSemantic1.html
@@ -1,7 +1,7 @@
 <!doctype html> <!-- basicSemantic1.html -->
 <html>
 <head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, inital-scale=1">
+<meta name="viewport" content="width=device-width, inital-scale=1"/>
 <style>
   header, nav, section, article, aside, footer
   {border:1px solid gray; margin:5px; padding:8px; width:100px;}
@@ -18,7 +18,7 @@
    a:visited{
     color:pink; background-color:transparent; text-decoration:none; }
    a:hover{
-    color:red; background-color:transparent; text-decoration:none; }
+    color:red; background-color:transparent; text-decoration:underline; }
    a:active{
     color:blue; background-color:transparent; text-decoration:none; }
   </style>
@@ -38,12 +38,12 @@
   <p>다음</p>
   <a href="http://wwwgoogle.com" target=" blank">구글이동(새윈도우)</a></br>
   <a href="anchor2.html">사이트내문서이동</a></br>
-  <a href="#chapter3">제3장문서내이동(북마크이동)</a></br>
+  <a href="#chapter3">제3장문서내이동(북마크이동)</a></br></section>
 <section><h3 id="chapter2">제2장</h3>
 <p>제2장 입니다. 제 2장은 무엇을 정의합니다.</p>
 <p>HTML과 같은 하이퍼미디어에서, 노드는 HTML문서, 멀티미디어 정보를 표현하는 기본단위이고, 
   링크는 노드간을 연결하여, 앵커는 링크의 출발점 또는 도착점을 의미합니다.</p>
-  <p>제 1장에서 공부한 내용이 궁금하다면 다음을<a href="#chapter1">클릭</a>하세요.</p></section>
+<p>제 1장에서 공부한 내용이 궁금하다면 다음을<a href="#chapter1">클릭</a>하세요.</p></section>
 <section><h3 id="chapter3">제3장</h3>
 <p>제3장 입니다. 제 3장은 무엇을 정의합니다.</p>
 <table><tr><th>이동주소</th><th>사이트명</th><th>설명</th></tr>
