--- a/5/basicSemantic1.html
+++ b/5/basicSemantic1.html
@@ -36,7 +36,7 @@
   <section><h3 id="chapter1">제1장</h3>
   <p>제1장 입니다.제 1장은 다음을 정의합니다.</p>
   <p>다음</p>
-  <a href="http://wwwgoogle.com" target=" blank">구글이동(새윈도우)</a></br>
+  <a href="http://www.google.com" target="_blank">구글이동(새윈도우)</a></br>
   <a href="sam364512.github.io/5/anchor2.html">사이트내문서이동</a></br>
   <a href="#chapter3">제3장문서내이동(북마크이동)</a></br></section>
 <section><h3 id="chapter2">제2장</h3>
