--- a/5/basiclimage.html
+++ b/5/basiclimage.html
@@ -7,15 +7,15 @@
 <figure>
   <h3>SNS 사이트</h3>
   <a href=https://www.google.com>
-    <img src="https://sam364512.github.io/basicImage.html/googlePlus.png" alt="구글"/><br/>
+    <img src="https://sam364512.github.io/5/googlePlus.png" alt="구글"/><br/>
     <figcaption>(그림) 구글 링크</figcaption>
   </a>
   <a href=https://www.facebook.com>
-    <img src="https://sam364512.github.io/basicImage.html/facebookOne.png" alt="페이스북"/><br/>
+    <img src="https://sam364512.github.io/5/facebookOne.png" alt="페이스북"/><br/>
     <figcaption>(그림) 페이스북 링크</figcaption>
   </a>
   <a href=http://www.twitter.com>
-    <img src="https://sam364512.github.io/basicImage.html/twitterYou.png" alt="트위터"/><br/>
+    <img src="https://sam364512.github.io/5/twitterYou.png" alt="트위터"/><br/>
     <figcaption>(그림)트위터 링크</figcaption>
   </a>
 </figure>
