--- a/5/basicSemantic2.html
+++ b/5/basicSemantic2.html
@@ -26,21 +26,21 @@
 <body>
   <header>
   <h2>실습을 환영합니다.</h2>
-  <img src="https://newbress02.github.io/html5/hw5/scene.png" alt="히말라야"/>
+  <img src="https://sam364512.github.io/5/scene.png" alt="히말라야"/>
   </header>
   <nav>
     <ui>
     <li><a href="http://www.naver.com" target=" blank">네이버(새 윈도우)</a></li>
-    <li><a href="anchor2.html">사이트 내 문서 이동</a></li>
+    <li><a href="sam364512.github.io/5/anchor2.html">사이트 내 문서 이동</a></li>
     <li><a href="#chapter1">제 1장 이동(북마크 이동)</a></li>
     </ui>
   </nav>
-  <section>   <!--  main  -->
+  <section>
   <section> <h3 id ="chapter1">제 1장</h3>
     <p>제 1장 입니다. 제 1장은 다음을 정의합니다.</p>
     <p>다음</p>
     <a href="http://www.google.com" target=" blank">구글 이동(새 윈도우)</a><br/>
-    <a href="anchor2.html">사이트 내 문서 이동</a><br/>
+    <a href="sam364512.github.io/5/anchor2.html">사이트 내 문서 이동</a><br/>
     <a href="#chapter3">제 3장 문서 내 이동(북마크 이동)</a><br/>
   </section>
   <section><h3 id ="chapter2">제 2장</h3>
@@ -49,20 +49,20 @@
        링크는 노드간을 연결하며, 앵커는 링크의 출발점 또는 도착점을 의미합니다.</p>
     <p>제 1장에서 공부한 내용이 궁금하다면 다음을 <a href="#chapter1">클릭</a>하세요.</p>
   </section>
-  <section>  <h3 id ="chapter3">제 3장</h3>
+  <section><h3 id ="chapter3">제 3장</h3>
     <p>제 3장 입니다. 제 3장은 무엇을 정의합니다.</p>
     <table>
     <tr><th>이동 주소</th><th>사이트 명</th><th>설명</th></tr>
     <tr> <td>구글</td> <td><a href="http://www.naver.com">네이버</a></td> <td>네이버</td> </tr>
-    <tr> <td>사이트 다른 문서</td> <td><a href="anchor2.html">anchor2.html로 이동</a></td> <td>anchor2</td> </tr>
+    <tr> <td>사이트 다른 문서</td> <td><a href="sam364512.github.io/5/anchor2.html">anchor2.html로 이동</a></td> <td>anchor2</td> </tr>
     <tr> <td>제 1장</td> <td><a href="#chapter1">제 1장 이동(북마크 이동)</a></td> <td>제 1</td> </tr>
   </section>
-  </section>   <!--  main  -->
+  </section> 
   <aside>
     <ul>
-    <li><a href=https://www.google.com><img src="../images/google/Plus.png" alt="구글"/></a></li>
-    <li><a href=https://www.facebook.com><img src="../images/facebookOne/Plus.png" alt="페이스북"/></a></li>
-    <li><a href=https://www.twitter.com><img src="../images/twitterYou/Plus.png" alt="트위터"/></a></li>
+    <li><a href=https://www.google.com><img src="sam364512.github.io/5/googlePlus.png" alt="구글"/></a></li>
+    <li><a href=https://www.facebook.com><img src="sam364512.github.io/5/facebookOne/Plus.png" alt="페이스북"/></a></li>
+    <li><a href=https://www.twitter.com><img src="sam364512.github.io/5/twitterYou/Plus.png" alt="트위터"/></a></li>
     </ul>
   </aside>
   <footer>
