--- a/5/basicSemantic2.html
+++ b/5/basicSemantic2.html
@@ -61,8 +61,8 @@
   <aside>
     <ul>
     <li><a href=https://www.google.com><img src="sam364512.github.io/5/googlePlus.png" alt="구글"/></a></li>
-    <li><a href=https://www.facebook.com><img src="sam364512.github.io/5/facebookOne/Plus.png" alt="페이스북"/></a></li>
-    <li><a href=https://www.twitter.com><img src="sam364512.github.io/5/twitterYou/Plus.png" alt="트위터"/></a></li>
+    <li><a href=https://www.facebook.com><img src="sam364512.github.io/5/facebookOne.png" alt="페이스북"/></a></li>
+    <li><a href=https://www.twitter.com><img src="sam364512.github.io/5/twitterYou.png" alt="트위터"/></a></li>
     </ul>
   </aside>
   <footer>
