--- a/5/imageMap.html
+++ b/5/imageMap.html
@@ -6,7 +6,7 @@
 </html>
 <body>
 <b>그림을 클릭하세요</b><br>
-<img src="https://sam364512.github.io/5/basicImage.html/korea.gif" border=0 usemap="#area">
+<img src="https://sam364512.github.io/5/korea.gif" border=0 usemap="#area">
 <map name="area">
    <area alt='서울' shape="rect" target="_blank" coords='65,63,125,88' href="https://sam364512.github.io/5/seoul.html">
    <area alt='인천' shape="rect" coords='25,90,94,112' href="incheon.html">
