--- a/5/hw1/hw.html
+++ b/5/hw1/hw.html
@@ -6,7 +6,7 @@
 </html>
 <body>
 <b>그림을 클릭하세요</b><br>
-<img src="https://sam364512.github.io/5/hw1/schoolmap.png" border=0 usemap="#area">
+<img src="https://sam364512.github.io/5/schoolmap.png" border=0 usemap="#area">
 <map name="area">
    <area alt='산학협력관(25호관)' shape="rect" target="_blank" coords='583,52,730,79' href="https://sam364512.github.io/5/hw1/산학협력관.html">
    <area alt='융합과학관(24호관)' shape="rect" target="_blnak" coords='630,114,777,140' href="https://sam364512.github.io/5/hw1/융합과학관.html">
