--- a/5/hw1/hw.html
+++ b/5/hw1/hw.html
@@ -23,7 +23,7 @@
    <area alt='드래곤볼(본부석)' shape="rect" target="_blnak" coords='691,545,840,570' href="https://sam364512.github.io/5/hw1/드래곤볼.html">
    <area alt='맥센터(렉처홀)' shape="rect" target="_blnak" coords='479,427,626,453' href="https://sam364512.github.io/5/hw1/맥센터1.html">
    <area alt='맥센터(메인홀)' shape="rect" target="_blnak" coords='393,556,541,580' href="https://sam364512.github.io/5/hw1/맥센터2.html">
-   <area alt='창학관(1호관)' shape="rect" target="_blnak" coords='445,344,593,368' href="https://sam364512.github.io/5/hw1/5_3_2/창학관.html">
+   <area alt='창학관(1호관)' shape="rect" target="_blnak" coords='445,344,593,368' href="https://sam364512.github.io/5/hw1/창학관.html">
    <area alt='학생회관(3호관)' shape="rect" target="_blnak" coords='348,297,495,323' href="https://sam364512.github.io/5/hw1/학생회관.html">
    <area alt='응용과학관(2호관)' shape="rect" target="_blnak" coords='288,339,434,364' href="https://sam364512.github.io/5/hw1/응용과학관.html">
    <area alt='입학홍보관(14호관)' shape="rect" target="_blnak" coords='248,466,395,492' href="https://sam364512.github.io/5/hw1/입학홍보관.html">
