--- a/5/hw2/hw2.html
+++ b/5/hw2/hw2.html
@@ -6,7 +6,7 @@
 </html>
 <body>
 <b>각 나라의 위치를 클릭하세요</b><br>
-   <b> 지정된 나라는 한국, 일본, 중국, 러시아, 영국, 미국, 캐나다, 프랑스, 호주, 멕시코입니다..</b><br>
+   <b> 지정된 나라는 한국, 일본, 중국, 러시아, 영국, 미국, 캐나다, 프랑스, 호주, 멕시코입니다.</b><br>
 <img src="https://sam364512.github.io/5/세계지도.png" border=0 usemap="#area">
 <map name="area">
    <area alt='한국' shape="rect" target="_blank" coords='1001,208,1022,214' href="https://sam364512.github.io/5/hw2/한국.html">
