--- a/5/hw2/호주.html
+++ b/5/hw2/호주.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>           
-<html><head><meta   charset="utf-8"/>
+<html><head><meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>호주</title>
 </head>
 <body>
-<p> 호주의 수도는 입니다. </p>
+<p> 호주의 수도는 캔버라입니다. </p>
 </body>
 </html>
