--- a/5/hw2/러시아.html
+++ b/5/hw2/러시아.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>           
-<html><head><meta   charset="utf-8"/>
+<html><head><meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>러시아</title>
 </head>
 <body>
-<p> 러시아의 수도는 입니다. </p>
+<p> 러시아의 수도는 모스크바입니다. </p>
 </body>
 </html>
