--- a/5/hw2/영국.html
+++ b/5/hw2/영국.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>           
-<html><head><meta   charset="utf-8"/>
+<html><head><meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>영국</title>
 </head>
 <body>
-<p> 영국의 수도는 입니다. </p>
+<p> 영국의 수도는 런던입니다. </p>
 </body>
 </html>
