--- a/5/hw2/프랑스.html
+++ b/5/hw2/프랑스.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>           
-<html><head><meta   charset="utf-8"/>
+<html><head><meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>프랑스</title>
 </head>
 <body>
-<p> 의 수도는 파리입니다. </p>
+<p> 프랑스의 수도는 파리입니다. </p>
 </body>
 </html>
