--- a/5/hw2/hw2.html
+++ b/5/hw2/hw2.html
@@ -16,7 +16,7 @@
    <area alt='영국' shape="rect" target="_blnak" coords='518,134,541,144' href="https://sam364512.github.io/5/hw2/영국.html">
    <area alt='미국' shape="rect" target="_blnak" coords='106,176,190,212' href="https://sam364512.github.io/5/hw2/미국.html">
    <area alt='캐나다' shape="rect" target="_blnak" coords='117,108,205,137' href="https://sam364512.github.io/5/hw2/캐나다.html">
-   <area alt='브라질' shape="rect" target="_blnak" coords='273,393,353,414' href="https://sam364512.github.io/5/hw2/브라질.html">
+   <area alt='프랑스' shape="rect" target="_blnak" coords='521,161,554,178' href="https://sam364512.github.io/5/hw2/프랑스.html">
    <area alt='호주' shape="rect" target="_blnak" coords='1020,467,1099,492' href="https://sam364512.github.io/5/hw2/호주.html">
    <area alt='멕시코' shape="rect" target="_blnak" coords='91,242,160,286' href="https://sam364512.github.io/5/hw2/멕시코.html">
    <area shape="default" noref>
