--- a/6/basicAudio.html
+++ b/6/basicAudio.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html> <!-- basicAudio.html -->          
+<html>
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>HTML5 오디오 실습</title>
+</head>
+<body>
+  <h4>오디오 태그</h4>
+  <audio controls="controls">
+    <source src="./boom.mp3"type="audio/mp3">
+          브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!
+  </audio><hr/>
+</body>
+</html>
