--- a/6/basicAudio.html
+++ b/6/basicAudio.html
@@ -8,7 +8,9 @@
 <body>
   <h4>오디오 태그</h4>
   <audio controls="controls">
-    <source src="./boom.mp3"type="audio/mp3">
+    <source src="sam364512.github.io/6/boom.ogg"type="audio/ogg">
+    <source src="sam364512.github.io/6/boom.mp3"type="audio/,p3">
+    <source src="sam364512.github.io/6/boom.wav"type="audio/wav">
           브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!
   </audio><hr/>
 </body>
