--- a/6/anchor2.html
+++ b/6/anchor2.html
@@ -29,4 +29,19 @@
   </nav>
   <section>
    <section><h3 id ="chapter1">오늘의 교통상황</h3>
-    
+    <p>오늘의 교통상황을 비디오로 제공합니다. 장소는 대한민국 만세로 입니다. 많은 자동차로 붐비고 있습니다.
+    자동차와 자동차간 거리가 1미터 이내로 사고 우려가 높았습니다. 하지만, 다행히도 사고는 발생하지 않았습니다.
+    아래가 교통상황 입니다. </p>
+    <h4>만세로 교통상황 </h4>
+    <video id="traffic" controls="controls">
+     <source src="sam364512.github.io/6/traffic.mp4" type="video/mp4">
+     <source src="sam364512.github.io/6/traffic.ogg" type="video/ogg">
+     <source src="sam364512.github.io/6/traffic.webm" type="video/webm">
+        브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!  </video><hr/>
+   </section>
+  </section>
+  <footer>
+    <p>&copy; 20XX Made by Korea. All rights reserved.</p>
+  </footer>
+  </body>
+</html>
