--- a/6/anchor2.html
+++ b/6/anchor2.html
@@ -34,9 +34,9 @@
     아래가 교통상황 입니다. </p>
     <h4>만세로 교통상황 </h4>
     <video id="traffic" controls="controls">
-     <source src="sam364512.github.io/6/traffic.mp4" type="audio/mp4">
+     <source src="sam364512.github.io/6/traffic.mp4" type="video/mp4">
      <source src="sam364512.github.io/6/traffic.ogg" type="video/ogg">
-     <source src="sam364512.github.io/6/traffic.webm" type="audio/webm">
+     <source src="sam364512.github.io/6/traffic.webm" type="video/webm">
         브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!  </video><hr/>
    </section>
   </section>
