--- a/6/formText1.html
+++ b/6/formText1.html
@@ -3,10 +3,10 @@
 <title>폼 학습</title></head>
 <body>
 <section>
-<form action="http://jsptogo.herokuapp.com/jspsrc/formText1.jsp" method="post">
+<form action="http://sam364512.github.io/6/formText1.jsp" method="post">
   <fieldset>
     <legend>사용자 정보</legend>
-    <label for="namex">아이디</label><br/>
+    <label for="namex">아이디</label>
     <input id="namex" type="text" name="namex" size="20" maxlength="20" placeholder="아이디입력"/>
     <input type="button" value="중복확인"/></br>
     <label for="passx">패스워드</label>
