--- a/6/formText1.html
+++ b/6/formText1.html
@@ -3,12 +3,12 @@
 <title>폼 학습</title></head>
 <body>
 <section>
-<form action="http://sam364512.github.io/6/formText1.jsp" method="post">
+<form action="http://jsptogo.herokuapp.com/jspsrc/formText1.jsp" method="post">
   <fieldset>
     <legend>사용자 정보</legend>
     <label for="namex">아이디</label>
     <input id="namex" type="text" name="namex" size="20" maxlength="20" placeholder="아이디입력"/>
-    <input type="button" value="중복확인"/></br>
+    <input type="button" value="중복확인"/><br/>
     <label for="passx">패스워드</label>
     <input id="passx" type="password" name="passx"/><br/>
     <input type="submit" value="서버전송"/>
