--- a/6/basicVideo.html
+++ b/6/basicVideo.html
@@ -8,16 +8,16 @@
 <body>
   <h4>비디오 태그 1 320*200 </h4>
   <video controls="controls" height="320"  width="200">
-    <source src="sam364512.github.io/6/traffic.mp4" type="video/mp4">
-    <source src="sam364512.github.io/6/traffic.ogg" type="video/ogg">
-    <source src="sam364512.github.io/6/traffic.webm" type="video/webm">
+    <source src="traffic.mp4" type="video/mp4">
+    <source src="traffic.ogg" type="video/ogg">
+    <source src="traffic.webm" type="video/webm">
           브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!
   </video><hr/>
   <h4>비디오 태그 2</h4>
   <video controls="controls">
-    <source src="sam364512.github.io/6/traffic.mp4" type="video/mp4">
-    <source src="sam364512.github.io/6/traffic.ogg" type="video/ogg">
-    <source src="sam364512.github.io/6/traffic.webm" type="video/webm">
+    <source src="traffic.mp4" type="video/mp4">
+    <source src="traffic.ogg" type="video/ogg">
+    <source src="traffic.webm" type="video/webm">
           브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!
   </video><hr/>
 </body>
