--- a/7/formEmailAuto1.html
+++ b/7/formEmailAuto1.html
@@ -3,7 +3,7 @@
 <title>폼 학습</title></head>
 <body>
 <section>
-<form  action="http://jsptogo.herokuapp.com/jspsrc/formEmailAuto.jsp" method="post" autocomplete="on">
+<form action="http://sam364512.github.io/7/formEmailauto1.jsp" method="post" autocomplete="on">
  <fieldset>
    <legend>이름 입력</legend>
    <label for="namex">이름: </label>
