--- a/7/basicSemantic4.html
+++ b/7/basicSemantic4.html
@@ -47,9 +47,9 @@
     아래가 교통상황 입니다. </p>
     <h4>비디오 태그 1 320*200 </h4>
     <video controls="controls" height="320"  width="200">
-     <source src="traffic.mp4" type="audio/mp4">
-     <source src="traffic.ogg" type="audio/ogg">
-     <source src="traffic.webm" type="audio/webm">
+     <source src="https://sam364512.github.io/6/traffic.mp4" type="audio/mp4">
+     <source src="https://sam364512.github.io/6/traffic.ogg" type="audio/ogg">
+     <source src="https://sam364512.github.io/6/traffic.webm" type="audio/webm">
         브라우저가 지원하지 않거나 오디오 형식의 파일이 조재하지 않습니다!!!  </video><hr/>
   </section>
   <section><h3 id ="chapter2">제 2장</h3>
