--- a/7/anchor2.html
+++ b/7/anchor2.html
@@ -52,9 +52,9 @@
     대한으로 길이 보전하세 </p>
     <h4>만세로 교통상황 </h4>
     <video id="traffic" video controls="controls">
-      <source src="traffic.mp4" type="video/mp4">
-      <source src="traffic.ogg" type="video/ogg">
-      <source src="traffic.webm" type="video/webm">
+     <source src="https://sam364512.github.io/6/traffic.mp4" type="audio/mp4">
+     <source src="https://sam364512.github.io/6/traffic.ogg" type="audio/ogg">
+     <source src="https://sam364512.github.io/6/traffic.webm" type="audio/webm">
           브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!     </video><hr/>    
     </section>    
 </section>    <!--  /main  -->
