--- a/index.html
+++ b/index.html
@@ -55,5 +55,41 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 <li><a href="https://sam364512.github.io/4/basicSemantic.html">실습 과제 4-3 basicSemantic </a></li>
 <li><a href="https://sam364512.github.io/4/basicModel.html">실습 과제 4-3  basicModel </a></li>
 </ol><hr/>
+<li> 5주차 </li>
+<ol>
+<li><a href="https://sam364512.github.io/5/anchor1.html">과제 5-1 anchor1 </a></li>
+<li><a href="https://sam364512.github.io/5/anchor2.html">과제 5-1 anchor2 </a></li>  
+<li><a href="https://sam364512.github.io/5/advAnchor.html">과제 5-1 advAnchor </a></li>
+<li><a href="https://sam364512.github.io/5/basicSemantic1.html">과제 5-1 basicSemantic1 </a></li>
+<li><a href="https://sam364512.github.io/5/basiclmage.html">과제 5-2 basiclmage </a></li>
+<li><a href="https://sam364512.github.io/5/basicSemantic2.html">과제 5-2  basicSemantic2 </a></li>
+<li><a href="https://sam364512.github.io/5/imageMap.html">과제 5-3 imageMap </a></li>
+<li><a href="https://sam364512.github.io/5/hw1/hw.html">과제 5-3 hw </a></li>
+<li><a href="https://sam364512.github.io/5/hw2/hw2.html">과제 5-3 hw2 </a></li>
+</ol><hr/>
+<li> 6주차 </li>
+<ol>
+<li><a href="https://sam364512.github.io/6/basicAudio.html">과제 6-1 basicAudio </a></li>
+<li><a href="https://sam364512.github.io/6/basicVideo.html">과제 6-2 basicVideo </a></li>  
+<li><a href="https://sam364512.github.io/6/basicSemantic3.html">과제 6-2 basicSemantic3 </a></li>
+<li><a href="https://sam364512.github.io/6/anchor2.html">과제 6-2 anchor2 </a></li>
+<li><a href="https://sam364512.github.io/6/formFieldset1.html">과제 6-3 formFieldset1 </a></li>
+<li><a href="https://sam364512.github.io/6/formText1.html">과제 6-3  formText1 </a></li>
+</ol><hr/>
+<li> 7주차 </li>
+<ol>
+<li><a href="https://sam364512.github.io/7/formRadio1.html">과제 7-1 formRadio1 </a></li>
+<li><a href="https://sam364512.github.io/7/formCheckbox1.html">과제 7-1 formCheckbox1 </a></li>  
+<li><a href="https://sam364512.github.io/7/formSearch1.html">과제 7-1 formSearch1 </a></li>
+<li><a href="https://sam364512.github.io/7/formDateTime1.html">과제 7-1 formDateTime1 </a></li>
+<li><a href="https://sam364512.github.io/7/formEmailAuto1.html">과제 7-2 formEmailAuto1 </a></li>
+<li><a href="https://sam364512.github.io/7/formFormaction1.html">과제 7-2  formFormaction1 </a></li>
+<li><a href="https://sam364512.github.io/7/formSelect1.html">과제 7-2 formSelect1 </a></li>
+<li><a href="https://sam364512.github.io/7/formMselect1.html">과제 7-3 formMselect1 </a></li>  
+<li><a href="https://sam364512.github.io/7/formTextarea1.html">과제 7-3 formTextarea1 </a></li>
+<li><a href="https://sam364512.github.io/7/anchor2.html">과제 7-3 anchor2 </a></li>
+<li><a href="https://sam364512.github.io/7/basicSemantic4.html">과제 7-3 basicSemantic4 </a></li>
+<li><a href="https://sam364512.github.io/7/jspintro.html">과제 7-3  jspintro </a></li>
+</ol><hr/>
 </ul>
 </body></html>
