--- a/9/sampleDom.html
+++ b/9/sampleDom.html
@@ -1,10 +1,9 @@
-<!doctype html> <!-- SampleDom.html -->
-<html><head>
- <meta charset="utf-8"/>
- <meta name="viewport" content="width=device-width, initial-scale=1"/>
- <link rel="stylesheet" href="css/sample.css"/>
-  <script src="js/sample.js"></script>
- <title>CSS 실습</title>
+<!doctype html> <!-- sampleDom.html -->
+<html><head><meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="stylesheet" href="css/sample.css"/>
+<script src="js/sample.js"></script>
+<title>CSS 실습</title>
 </head>
 <body>
   <header>
