--- a/13/memb2.html
+++ b/13/memb2.html
@@ -1,7 +1,6 @@
 <!doctype html><!--   memb2.html   -->
 <html><head><meta charset="utf-8"/>
-<style>
-#section0 { width:400px; height:200px; 
+<style>#section0 { width:400px; height:200px; 
           border:solid 1px lightgray; border-radius:1em; }
 ul { list-style:none; }
 ul.level_1 > li { display:inline-block;}
